--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.6.1",
-    "@material-ui/lab": "^4.0.0-alpha.32",
-    "@material-ui/styles": "^4.6.0",
-    "actions-on-google": "^2.12.0",
+    "@material-ui/core": "^4.11.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/styles": "^4.11.1",
+    "actions-on-google": "^2.13.0",
     "base-64": "^0.1.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.3",
     "bootstrap-sass": "^3.4.1",
-    "bootstrap-switch-button-react": "^1.1.0",
+    "bootstrap-switch-button-react": "^1.2.0",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.1",
     "node-sass": "^4.14.1",
     "pluralize": "^8.0.0",
-    "react": "^16.11.0",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.11.0",
-    "react-icons": "^3.8.0",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^16.14.0",
+    "react-icons": "^3.11.0",
     "react-lottie": "^1.2.3",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.1",
     "styled-theming": "^2.2.0",
@@ -51,7 +51,7 @@
     ]
   },
   "devDependencies": {
-    "ngrok": "^3.2.5",
-    "nodemon": "^2.0.1"
+    "ngrok": "^3.3.0",
+    "nodemon": "^2.0.6"
   }
 }
